# openapi-generator

idl/samples/python-fastapi-idl/youtube/: README.md  openapi.yaml  setup.cfg
idl/samples/python-fastapi-idl/youtube/.openapi-generator/: FILES
idl/samples/python-fastapi-idl/youtube/src/openapi_server/: dependency_util.py  main.py  security_api.py
idl/samples/python-fastapi-idl/youtube/src/openapi_server/apis/: comment_threads_api.py  search_api.py  videos_api.py
idl/samples/python-fastapi-idl/youtube/src/openapi_server/models/: abuse_report.py  abuse_type.py  access_policy.py  activity.py  activity_content_details.py  activity_content_details_bulletin.py  activity_content_details_channel_item.py  activity_content_details_comment.py  activity_content_details_favorite.py  activity_content_details_like.py  activity_content_details_playlist_item.py  activity_content_details_promoted_item.py  activity_content_details_recommendation.py  activity_content_details_social.py  activity_content_details_subscription.py  activity_content_details_upload.py  activity_list_response.py  activity_snippet.py  caption.py  caption_list_response.py  caption_snippet.py  cdn_settings.py  channel.py  channel_audit_details.py  channel_banner_resource.py  channel_branding_settings.py  channel_content_details.py  channel_content_details_related_playlists.py  channel_content_owner_details.py  channel_conversion_ping.py  channel_conversion_pings.py  channel_list_response.py  (+146 more)
idl/samples/python-fastapi-idl/youtube/tests/: test_comment_threads_api.py  test_search_api.py  test_videos_api.py
(+795 files in other folders)
