[metadata]
name = openapi_server
version = v3
description = The YouTube Data API v3 is an API that provides access to YouTube data, such as videos, playlists, and channels.
long_description = file: README.md
keywords = OpenAPI YouTube Data API v3
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
